--- a/static/main.css
+++ b/static/main.css
@@ -36,6 +36,10 @@ Off white: #D3DAE3
   background-color: #E0CFAF;
 }
 
+.off-white-bg{
+    background-color: #D3DAE3;
+}
+
 /* ==========================TEXT COLORS========================*/
 .steel-grey-text{
   color: #383C4A;
@@ -59,6 +63,10 @@ Off white: #D3DAE3
 
 .gold-text{
   color: #E0CFAF;
+}
+
+.off-white-text{
+    color: #D3DAE3;
 }
 
 /* +++++++++++++++++++++++ FONTS +++++++++++++++++++++++ */
@@ -85,7 +93,7 @@ Off white: #D3DAE3
   text-align: center;
 }
 .subsection-1{
-  width: 900px;
+/*  width: 900px;*/
 }
 
 a {
