--- a/static/main.css
+++ b/static/main.css
@@ -69,15 +69,21 @@ Off white: #D3DAE3
     color: #D3DAE3;
 }
 
+.dark-text{
+    color: #1d1e21;
+}
+
 /* +++++++++++++++++++++++ FONTS +++++++++++++++++++++++ */
 
 .lato{
-  font-family: 'Lato', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
- .raleway{
-   font-family: 'Raleway', sans-serif;
- }
-
+.raleway{
+    font-family: 'Raleway', sans-serif;
+}
+.megrim{
+    font-family: 'Megrim', cursive;
+}
  /* +++++++++++++++++++++++ MAIN +++++++++++++++++++++++ */
 
 .head{
@@ -85,7 +91,7 @@ Off white: #D3DAE3
   padding-bottom: 10px;
   font-weight: 100;
   text-decoration-style: none;
-  font-size:30px
+  font-size:45px
 }
 
 .fixed{
@@ -93,10 +99,26 @@ Off white: #D3DAE3
   text-align: center;
 }
 .subsection-1{
-/*  width: 900px;*/
+  width: 900px;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.section-head{
+    padding-top: 10px;
+    font-size: 40px;
+}
+
+.contents{
+    font-size: 22px;
+    font-weight: 200;
+    padding-bottom: 10px;
+}
+
+.contact{
+    font-size: 18px;
+    padding-bottom: 10px;
 }
