--- a/static/main.css
+++ b/static/main.css
@@ -87,7 +87,7 @@ Off white: #D3DAE3
  /* +++++++++++++++++++++++ MAIN +++++++++++++++++++++++ */
 
 .head{
-  padding-top: 10px;
+/*  padding-top: 10px;*/
   padding-bottom: 10px;
   font-weight: 100;
   text-decoration-style: none;
@@ -122,3 +122,10 @@ a {
     font-size: 18px;
     padding-bottom: 10px;
 }
+
+.side-nav{
+  background-color: inherit;
+  width: 10%;
+}
+
+
