--- a/static/main.css
+++ b/static/main.css
@@ -146,7 +146,7 @@ a {
 .side-nav li > a{
     color: #E0CFAF;
     text-decoration:none;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Source Code Pro', monospace;
 
 }
 
